<resources>
    <string name="app_name">HAMIGUA</string>
    <string name="title_activity_nav_header_main">Nav_header_main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back"><![CDATA[<--]]></string>
    <string name="forward"><![CDATA[-->]]></string>
    <string name="請輸入訊息">請輸入訊息</string>
    <string name="訊息">訊息</string>
    <string name="全選">全選</string>
    <string name="總金額">總金額</string>
    <string name="money0">0</string>
    <string name="去買單">去買單(0)</string>
    <string name="賣場名稱">賣場名稱/賣家名稱</string>
    <string name="商品名稱">商品名稱</string>
    <string name="購物車商品規格">規格：黑色, L</string>
    <string name="購物車商品金額">$金額</string>
    <string name="數量">數量</string>
    <string name="購物車商品數量">0</string>
    <string name="money">$</string>
    <string name="刪除">刪除</string>
    <string name="商品數量">商品數量：</string>
    <string name="顏色">顏色</string>
    <string name="尺寸">尺寸</string>
    <string name="確認">確認</string>
    <string name="以達到購買上限">以達到購買上限</string>
    <string name="編輯">編輯</string>
    <string name="商品顏色">商品顏色</string>
    <string name="商品照片">0/0</string>
    <string name="搜尋商品">搜尋商品</string>
    <string name="搜尋更多商品">搜尋更多商品</string>
    <string name="商品金額">商品金額</string>
    <string name="聊聊">聊聊</string>
    <string name="加入購物車">加入購物車</string>
    <string name="直接購買">直接購買</string>
    <string name="選擇商品選項">選擇商品選項</string>
    <string name="商品">商品</string>
    <string name="評價">評價</string>
    <string name="查看賣場">查看賣場</string>
    <string name="逛逛賣場其他好物">逛逛賣場其他好物</string>
    <string name="查看全部">查看全部</string>
    <string name="商品詳情">商品詳情</string>
    <string name="清除搜尋歷史">清除搜尋歷史</string>
    <string name="價格">價格</string>
    <string name="最新">最新</string>
    <string name="最小值">最小值</string>
    <string name="最大值">最大值</string>
    <string name="男裝">男裝</string>
    <string name="女裝">女裝</string>
    <string name="童裝">童裝</string>
    <string name="由低至高">由低至高</string>
    <string name="收藏商品">收藏商品</string>
    <string name="結帳">結帳</string>
    <string name="訂單詳情">訂單詳情</string>
    <string name="選項">選項：黑色 , L</string>
    <string name="x1">x1</string>
    <string name="訂單金額">訂單金額 (1 商品)：</string>
    <string name="人偶性別">人偶性別</string>
    <string name="男性">男性</string>
    <string name="女性">女性</string>
    <string name="人偶身高">人偶身高</string>
    <string name="人偶身形">人偶身形</string>
    <string name="偏瘦">偏瘦</string>
    <string name="適中">適中</string>
    <string name="偏胖">偏胖</string>
    <string name="_46">46身</string>
    <string name="身長比例">身長比例</string>
    <string name="_55">55身</string>
    <string name="手臂擺福">手臂擺福</string>
    <string name="擺福較高">擺福較高</string>
    <string name="擺福較低">擺福較低</string>
    <string name="未確認訂單商品數量">1 商品</string>
    <string name="未確認訂單訂單金額">訂單金額:</string>
    <string name="聯絡賣家">聯絡賣家</string>
    <string name="確認訂單">確認訂單</string>
    <string name="查看評價">查看評價</string>
    <string name="尚未有訂單">尚未有訂單</string>
    <string name="你可能會喜歡">你可能會喜歡</string>
    <string name="在此賣場搜尋">在此賣場搜尋</string>
    <string name="賣場">賣場</string>
    <string name="分類">分類</string>
    <string name="品牌分類">品牌分類</string>
    <string name="商品分類">商品分類</string>
    <string name="h_m"><![CDATA[H&M]]></string>
    <string name="請選擇試穿顏色">請選擇試穿顏色</string>
    <string name="穿搭喜好設定">穿搭喜好設定</string>
    <string name="顏色分數">一、請您對以下顏色依照在服飾上喜歡的程度給分</string>
    <string name="寬窄分數">二、請您對以下寬窄搭配依照喜歡的程度給分</string>
    <string name="長度分數">三、請您對以下長度搭配依照喜歡的程度給分</string>
    <string name="明暗分數">四、請您對以下顏色明暗搭配依照喜歡的程度給分</string>
    <string name="色系搭配">五、請您對以下搭配依照喜歡的程度給分</string>
</resources>