<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/stroke_layout">

    <ImageView
        android:id="@+id/rating_product_imageview"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/stroke_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/rating_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:text="@string/商品名稱"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/rating_product_imageview"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rating_product_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:gravity="center"
        android:text="@string/選項"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/rating_product_imageview"
        app:layout_constraintTop_toBottomOf="@+id/rating_product_name"
        app:layout_constraintBottom_toTopOf="@id/rating_product_price"/>

    <TextView
        android:id="@+id/rating_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:text="@string/購物車商品金額"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/rating_product_imageview"
        app:layout_constraintBottom_toBottomOf="@id/rating_product_imageview" />

    <TextView
        android:id="@+id/rating_product_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@id/rating_product_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/x1"
        android:textSize="@dimen/_12ssp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
