<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".shop.customer.Cart">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/cartRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/stroke_layout"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cart_select_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:padding="2dp"
            android:text="@string/全選"
            android:textColor="@color/gray"
            android:buttonTint="@color/blue_main"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/checkout_text_helper"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="3dp"
            android:text="@string/總金額"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/price_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="5dp"
            android:text="@string/money"
            android:textColor="#EA0000"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/checkout_total_price"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/checkout_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/money0"
            android:textColor="#EA0000"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_checkout"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_checkout"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/去買單"
            android:textColor="@color/white"
            android:textStyle="bold"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@color/blue_main"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>